// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project team List page GET /case/123/project-team/ If user is inspector should not render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <h1 class=\\"govuk-heading-xl\\">Sorry, there is a problem with your login</h1>
            <p class=\\"govuk-body\\">You are not permitted to access this URL.</p>
            <p class=\\"govuk-body\\"><a href=\\"https://has-appeal.herokuapp.com/help/contact\\" class=\\"govuk-link\\">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists.</p>
        </div>
    </div>
</main>"
`;

exports[`Project team List page GET /case/123/project-team/ If user is not inspector should render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"top-errors-hook\\" role=\\"alert\\"></div>
    <div class=\\"govuk-grid-row govuk-!-padding-top-9 govuk-!-padding-bottom-2 govuk-!-margin-left-0 govuk-!-margin-bottom-7 pins-masthead-summary\\">
        <div class=\\"govuk-grid-column-full\\">
            <h4 class=\\"govuk-heading-m\\"> CASE/04 </h4>
            <h1 class=\\"govuk-heading-xl\\">Title CASE/04</h1>
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full govuk-body\\">Transport EN, Highways EN
                    <br>
                    <br><strong class=\\"govuk-tag govuk-tag--green\\">Pre-Application</strong>
                </div>
            </div>
        </div>
    </div>
    <div class=\\"govuk-grid-row display--flex\\">
        <div class=\\"pins-list-menu-container\\">
            <aside class=\\"govuk-!-margin-bottom-8 pins-list-menu\\">
                <h2 class=\\"govuk-visually-hidden\\">Case Details Menu</h2>
                <nav>
                    <ul class=\\"gov-list pins-list-menu\\">
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/\\"> Overview</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/project-information\\"> Project information</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/key-dates\\"> Key dates</a>
                        </li>
                        <li><a class=\\"govuk-link pins-selected-item\\" href=\\"/applications-service/case/4/project-team\\"> Project team</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/project-documentation\\"> Project documentation</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/project-updates\\"> Project updates</a>
                        </li>
                        <li><a class=\\"govuk-link \\" href=\\"/applications-service/case/4/examination-timetable\\"> Examination timetable</a>
                        </li>
                    </ul>
                </nav>
            </aside>
        </div>
        <div class=\\"govuk-grid-column-full\\">
            <h3 class=\\"govuk-heading-m\\">Project team</h3>
            <p class=\\"govuk-body\\">Add team members and their roles to the project.</p><a class='govuk-button govuk-!-margin-top-6'
            href='/applications-service/case/123/project-team/search'> Add team member</a>
        </div>
    </div>
</main>"
`;

exports[`Project team Search page GET /case/123/project-team/search should render the page with the search bar 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l govuk-!-margin-bottom-5\\"> Search for a team member</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"govuk-grid-row govuk-!-margin-top-6\\">
        <div class=\\"govuk-grid-column-full display--flex align-items--flex-end govuk-grid-row\\">
            <div class=\\"govuk-form-group govuk-grid-column-two-thirds\\">
                <label class=\\"govuk-label govuk-hint colour--secondary\\" for=\\"query\\">Search by name or email address</label>
                <input class=\\"govuk-input\\" id=\\"query\\"
                name=\\"query\\" type=\\"text\\">
            </div>
            <div>
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Search</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Project team Search page GET /case/123/project-team/search should render the page with the search bar and the results of the query 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l govuk-!-margin-bottom-5\\"> Search for a team member</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"govuk-grid-row govuk-!-margin-top-6\\">
        <div class=\\"govuk-grid-column-full display--flex align-items--flex-end govuk-grid-row\\">
            <div class=\\"govuk-form-group govuk-grid-column-two-thirds\\">
                <label class=\\"govuk-label govuk-hint colour--secondary\\" for=\\"query\\">Search by name or email address</label>
                <input class=\\"govuk-input\\" id=\\"query\\"
                name=\\"query\\" type=\\"text\\">
            </div>
            <div>
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Search</button>
            </div>
        </div>
    </form>
    <p class='govuk-body font-weight--700'>200 results</p>
    <table class=\\"govuk-table\\">
        <thead class=\\"govuk-table__head\\">
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                <th scope=\\"col\\" class=\\"govuk-table__header\\">Email</th>
                <th scope=\\"col\\" class=\\"govuk-table__header\\">Action</th>
            </tr>
        </thead>
        <tbody class=\\"govuk-table__body\\">
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Do Do</th>
                <td class=\\"govuk-table__cell\\">Do.Do@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/1/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Eiusmod Eiusmod</th>
                <td class=\\"govuk-table__cell\\">Eiusmod.Eiusmod@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/2/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Consectetur Adipiscing</th>
                <td class=\\"govuk-table__cell\\">Consectetur.Adipiscing@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/3/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Do Eiusmod</th>
                <td class=\\"govuk-table__cell\\">Do.Eiusmod@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/4/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sed Sed</th>
                <td class=\\"govuk-table__cell\\">Sed.Sed@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/5/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Do Do</th>
                <td class=\\"govuk-table__cell\\">Do.Do@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/6/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sit Amet</th>
                <td class=\\"govuk-table__cell\\">Sit.Amet@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/7/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sit Amet</th>
                <td class=\\"govuk-table__cell\\">Sit.Amet@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/8/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Consectetur Adipiscing</th>
                <td class=\\"govuk-table__cell\\">Consectetur.Adipiscing@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/9/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sed Sed</th>
                <td class=\\"govuk-table__cell\\">Sed.Sed@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/10/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Tempor Tempor</th>
                <td class=\\"govuk-table__cell\\">Tempor.Tempor@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/11/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Consectetur Adipiscing</th>
                <td class=\\"govuk-table__cell\\">Consectetur.Adipiscing@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/12/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Eiusmod Eiusmod</th>
                <td class=\\"govuk-table__cell\\">Eiusmod.Eiusmod@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/13/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Consectetur Adipiscing</th>
                <td class=\\"govuk-table__cell\\">Consectetur.Adipiscing@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/14/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sit Amet</th>
                <td class=\\"govuk-table__cell\\">Sit.Amet@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/15/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Do Do</th>
                <td class=\\"govuk-table__cell\\">Do.Do@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/16/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Elit Sed</th>
                <td class=\\"govuk-table__cell\\">Elit.Sed@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/17/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Adipiscing Adipiscing</th>
                <td class=\\"govuk-table__cell\\">Adipiscing.Adipiscing@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/18/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Adipiscing Adipiscing</th>
                <td class=\\"govuk-table__cell\\">Adipiscing.Adipiscing@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/19/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Elit Elit</th>
                <td class=\\"govuk-table__cell\\">Elit.Elit@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/20/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Do Do</th>
                <td class=\\"govuk-table__cell\\">Do.Do@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/21/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Tempor Tempor</th>
                <td class=\\"govuk-table__cell\\">Tempor.Tempor@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/22/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Adipiscing Elit</th>
                <td class=\\"govuk-table__cell\\">Adipiscing.Elit@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/23/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Tempor Tempor</th>
                <td class=\\"govuk-table__cell\\">Tempor.Tempor@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/24/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sed Do</th>
                <td class=\\"govuk-table__cell\\">Sed.Do@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/25/choose-role'>Select</a>
                </td>
            </tr>
        </tbody>
    </table>
    <nav class=\\"govuk-pagination\\" role=\\"navigation\\" aria-label=\\"results\\">
        <ul class=\\"govuk-pagination__list\\">
            <li class=\\"govuk-pagination__item govuk-pagination__item--current\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=1&amp;q=searchTerm\\"
                aria-label=\\"Page 1\\" aria-current=\\"page\\"> 1</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=2&amp;q=searchTerm\\"
                aria-label=\\"Page 2\\"> 2</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=3&amp;q=searchTerm\\"
                aria-label=\\"Page 3\\"> 3</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=4&amp;q=searchTerm\\"
                aria-label=\\"Page 4\\"> 4</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=5&amp;q=searchTerm\\"
                aria-label=\\"Page 5\\"> 5</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=6&amp;q=searchTerm\\"
                aria-label=\\"Page 6\\"> 6</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=7&amp;q=searchTerm\\"
                aria-label=\\"Page 7\\"> 7</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=8&amp;q=searchTerm\\"
                aria-label=\\"Page 8\\"> 8</a>
            </li>
        </ul>
        <div class=\\"govuk-pagination__next\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=2&amp;q=searchTerm\\"
            rel=\\"next\\"><span class=\\"govuk-pagination__link-title\\">Next</span><svg class=\\"govuk-pagination__icon govuk-pagination__icon--next\\" xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"13\\" width=\\"15\\" aria-hidden=\\"true\\" focusable=\\"false\\" viewBox=\\"0 0 15 13\\"><path d=\\"m8.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z\\"></path></svg></a>
        </div>
    </nav>
</main>"
`;

exports[`Project team Search page POST /case/123/project-team/search should render an error if search term is empty 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l govuk-!-margin-bottom-5\\"> Search for a team member</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"govuk-grid-row govuk-!-margin-top-6\\">
        <div class=\\"govuk-grid-column-full display--flex align-items--flex-end govuk-grid-row\\">
            <div class=\\"govuk-form-group govuk-form-group--error govuk-grid-column-two-thirds\\">
                <label class=\\"govuk-label govuk-hint colour--secondary\\" for=\\"query\\">Search by name or email address</label>
                <p id=\\"query-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a search term</p>
                <input                 class=\\"govuk-input govuk-input--error\\" id=\\"query\\" name=\\"query\\" type=\\"text\\"
                aria-describedby=\\"query-error\\">
            </div>
            <div>
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Search</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Project team Search page POST /case/123/project-team/search should render results of the search 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l govuk-!-margin-bottom-5\\"> Search for a team member</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"govuk-grid-row govuk-!-margin-top-6\\">
        <div class=\\"govuk-grid-column-full display--flex align-items--flex-end govuk-grid-row\\">
            <div class=\\"govuk-form-group govuk-grid-column-two-thirds\\">
                <label class=\\"govuk-label govuk-hint colour--secondary\\" for=\\"query\\">Search by name or email address</label>
                <input class=\\"govuk-input\\" id=\\"query\\"
                name=\\"query\\" type=\\"text\\">
            </div>
            <div>
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Search</button>
            </div>
        </div>
    </form>
    <p class='govuk-body font-weight--700'>200 results</p>
    <table class=\\"govuk-table\\">
        <thead class=\\"govuk-table__head\\">
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                <th scope=\\"col\\" class=\\"govuk-table__header\\">Email</th>
                <th scope=\\"col\\" class=\\"govuk-table__header\\">Action</th>
            </tr>
        </thead>
        <tbody class=\\"govuk-table__body\\">
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Do Do</th>
                <td class=\\"govuk-table__cell\\">Do.Do@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/1/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Eiusmod Eiusmod</th>
                <td class=\\"govuk-table__cell\\">Eiusmod.Eiusmod@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/2/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Consectetur Adipiscing</th>
                <td class=\\"govuk-table__cell\\">Consectetur.Adipiscing@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/3/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Do Eiusmod</th>
                <td class=\\"govuk-table__cell\\">Do.Eiusmod@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/4/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sed Sed</th>
                <td class=\\"govuk-table__cell\\">Sed.Sed@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/5/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Do Do</th>
                <td class=\\"govuk-table__cell\\">Do.Do@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/6/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sit Amet</th>
                <td class=\\"govuk-table__cell\\">Sit.Amet@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/7/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sit Amet</th>
                <td class=\\"govuk-table__cell\\">Sit.Amet@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/8/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Consectetur Adipiscing</th>
                <td class=\\"govuk-table__cell\\">Consectetur.Adipiscing@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/9/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sed Sed</th>
                <td class=\\"govuk-table__cell\\">Sed.Sed@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/10/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Tempor Tempor</th>
                <td class=\\"govuk-table__cell\\">Tempor.Tempor@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/11/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Consectetur Adipiscing</th>
                <td class=\\"govuk-table__cell\\">Consectetur.Adipiscing@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/12/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Eiusmod Eiusmod</th>
                <td class=\\"govuk-table__cell\\">Eiusmod.Eiusmod@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/13/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Consectetur Adipiscing</th>
                <td class=\\"govuk-table__cell\\">Consectetur.Adipiscing@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/14/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sit Amet</th>
                <td class=\\"govuk-table__cell\\">Sit.Amet@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/15/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Do Do</th>
                <td class=\\"govuk-table__cell\\">Do.Do@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/16/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Elit Sed</th>
                <td class=\\"govuk-table__cell\\">Elit.Sed@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/17/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Adipiscing Adipiscing</th>
                <td class=\\"govuk-table__cell\\">Adipiscing.Adipiscing@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/18/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Adipiscing Adipiscing</th>
                <td class=\\"govuk-table__cell\\">Adipiscing.Adipiscing@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/19/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Elit Elit</th>
                <td class=\\"govuk-table__cell\\">Elit.Elit@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/20/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Do Do</th>
                <td class=\\"govuk-table__cell\\">Do.Do@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/21/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Tempor Tempor</th>
                <td class=\\"govuk-table__cell\\">Tempor.Tempor@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/22/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Adipiscing Elit</th>
                <td class=\\"govuk-table__cell\\">Adipiscing.Elit@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/23/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Tempor Tempor</th>
                <td class=\\"govuk-table__cell\\">Tempor.Tempor@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/24/choose-role'>Select</a>
                </td>
            </tr>
            <tr class=\\"govuk-table__row\\">
                <th scope=\\"row\\" class=\\"govuk-table__header\\">Sed Do</th>
                <td class=\\"govuk-table__cell\\">Sed.Do@planninginspectorate.gov.uk</td>
                <td class=\\"govuk-table__cell\\"><a class='govuk-link' href='/applications-service/case/123/project-team/25/choose-role'>Select</a>
                </td>
            </tr>
        </tbody>
    </table>
    <nav class=\\"govuk-pagination\\" role=\\"navigation\\" aria-label=\\"results\\">
        <ul class=\\"govuk-pagination__list\\">
            <li class=\\"govuk-pagination__item govuk-pagination__item--current\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=1&amp;q=search term\\"
                aria-label=\\"Page 1\\" aria-current=\\"page\\"> 1</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=2&amp;q=search term\\"
                aria-label=\\"Page 2\\"> 2</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=3&amp;q=search term\\"
                aria-label=\\"Page 3\\"> 3</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=4&amp;q=search term\\"
                aria-label=\\"Page 4\\"> 4</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=5&amp;q=search term\\"
                aria-label=\\"Page 5\\"> 5</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=6&amp;q=search term\\"
                aria-label=\\"Page 6\\"> 6</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=7&amp;q=search term\\"
                aria-label=\\"Page 7\\"> 7</a>
            </li>
            <li class=\\"govuk-pagination__item\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=8&amp;q=search term\\"
                aria-label=\\"Page 8\\"> 8</a>
            </li>
        </ul>
        <div class=\\"govuk-pagination__next\\"><a class=\\"govuk-link govuk-pagination__link\\" href=\\"?number=2&amp;q=search term\\"
            rel=\\"next\\"><span class=\\"govuk-pagination__link-title\\">Next</span><svg class=\\"govuk-pagination__icon govuk-pagination__icon--next\\" xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"13\\" width=\\"15\\" aria-hidden=\\"true\\" focusable=\\"false\\" viewBox=\\"0 0 15 13\\"><path d=\\"m8.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z\\"></path></svg></a>
        </div>
    </nav>
</main>"
`;
